update Dockerfile - generalize exposed ports according to specified ENVs